--- a/tex/4_Proposal.tex
+++ b/tex/4_Proposal.tex
@@ -83,7 +83,7 @@ Our framework's next phase tries to diagnose property violations using learning 
 % https://github.com/lesunb/ais_bsn/wiki/Experiments
 % https://github.com/hub-se/PSP-UPPAAL
 
-We relate this step to the Adaptive Immunity mechanism that happens in our Biological Immune System, described in Section \ref{sec:bgBISOverview}, specially with the cellular immunity. T lymphocytes are used in this adaptive response, which are created in the bone marrow by a pseudo-random genetic rearrangement process and then developed in the Thymus by being tested against own cells \cite{AIS2014}. Similarly, our process generates randomly candidate strings that are tested for match against the operation dataset's self set, and, just as only T-cells that do not bind strongly with the self-cells are allowed to flow through the blood stream \cite{Kuby2019}, only the strings that do not match the self-set are used to enhance the observers later on.
+We relate this step to the Adaptive Immunity mechanism that happens in our Biological Immune System, described in Section \ref{sec:bgBISOverview}, specially with the cellular immunity response. T-lymphocytes are used in this adaptive response, which are created in the bone marrow by a pseudo-random genetic rearrangement process and then matured in the Thymus by being tested against own cells \cite{AIS2014}. Similarly, our process randomly generates candidate strings that are tested for match against the operation dataset's self-set, and, just as only T-cells that do not bind strongly with the self-cells are allowed to flow through the blood stream \cite{Kuby2019}, only the strings that do not match the self-set are used in the pattern analysis step, later on.
 
 This process can be further divided into two phases: the feature engineering phase, in which the operation dataset is reshaped and labeled, and the learning phase, where the Negative Selection algorithm generates nonself-detectors that are used to enhance the observers.
 % \cite{seams2018}
@@ -98,11 +98,11 @@ This process can be further divided into two phases: the feature engineering pha
 
 \subsection{Feature Engineering}
 
-This phase focuses on the shaping of the operation dataset in order to better adjust it to the learning algorithm. This is accomplished by first segmenting the data, then creating features to assist define individually a single segment, and lastly classifying the execution fragments as property violations (nonself) or not (self). 
+This phase focuses on the shaping of the operation dataset in order to better adjust it to the learning algorithm. This is accomplished by first segmenting the data, then creating features to define individually a single segment, and lastly classifying the execution fragments as property violations (nonself) or not (self). 
 
-The operation dataset is retrieved from Open Modelica as a collection of files, each of which is associated with a single simulation run in the previous step. A simulation file presents the data in a tabular manner, with the columns representing the values of the model's components, resources, signals and so on at every timestamp. The activities of segmentation, feature generation, and labeling are carried out for each individual file, and then concatenated in a resultant dataset.
+Depending on the simulation environment, the operation dataset is retrieved from the simulation as a collection of files, each of which is associated with a single simulation run in the previous step. A simulation file presents the data in a tabular manner, with the columns representing the values of the model's components, resources, signals and so on at every timestamp. The activities of segmentation, feature generation, and labeling are carried out for each individual file, and then concatenated in a resultant dataset.
 
-Initially, the data is split based on the attributes or time constraints of the property being analyzed. For example, suppose the following property is being analyzed: "Whenever a sensor node has collected data, the central node will eventually process it". In this scenario, the attribute that indicates when the data has been collected will be used to segment the dataset. An execution segment will start when the collect signal is sent until right before the next signal. However, if the property is time-bound, the execution segment will begin when the collect signal is transmitted and last for the duration of the constraint. Figure \ref{fig:Segmentation} illustrates this process. The first column indicates the timestamp, whilst the others show the signals that were sent, with the thick blue box highlighting when the data was collected. On the one hand, the blue bracket alludes to the length of a property time-bounded by 2 seconds, while, on the other hand, the grey bracket indicates the length of the execution segment if only the signal is considered.
+Initially, the data is split based on the attributes or time constraints of the property being analyzed. For example, suppose the following property from the BSN is being analyzed: "Whenever a sensor node has collected data, the central node will eventually process it". In this scenario, the attribute that indicates when the data has been collected will be used to segment the dataset. An execution segment will start when the collect signal is sent until right before the next signal. However, if the property is time-bounded, the execution segment will begin when the collect signal is transmitted and last for the duration of the constraint. Figure \ref{fig:Segmentation} illustrates this process. The first column indicates the timestamp, whilst the others show the signals that were sent, with the thick blue box highlighting when the data was collected. On the one hand, the blue bracket alludes to the length of a property time-bounded by 2 seconds, while, on the other hand, the grey bracket indicates the length of the execution segment if only the signal is considered.
 
 \begin{figure}[!h]
 	\centering
@@ -111,37 +111,36 @@ Initially, the data is split based on the attributes or time constraints of the 
 	\label{fig:Segmentation}
 \end{figure}
 
-Next, new features will be derived to characterize the execution segment, resulting in a single row. For instance, in the abovementioned figure, it would be possible to create features for each signal, indicanting if the data was processed, transfered and if it was processed by the central node, or another that identifies if the context was true at all times. Continuous features could also be created, like one that stores the amount of time between processing and transfering the data, or how long it took for the central node to process the data, and so on. 
+Next, new features will be derived to characterize the behavior of the CPS in that particular execution segment, resulting in a single row per segment. For instance, in the abovementioned figure, it would be possible to create features for each signal, indicanting if the data was processed, transfered and if it was processed by the central node, or another that identifies if the context was true at all times. Continuous features could also be created, like one that stores the amount of time between processing and transfering the data, or how long it took for the central node to process the data, and so on. 
 
 The quality and relevance of the features produced are essential for the development of the patterns that characterize the property violations, making this activity key to the effectiveness of our strategy. Additionally, it heavily depends on the domain knowledge of the software developer conducting the activity. The outcome is a new dataset, in which every row uniquely identifies and extracts the main features of an execution segment.
 
-Finally, the classification phase will make use of the recently derived dataset. The rows will be examined in accordance with the TCTL property, and a label indicating whether the row describes a violation or can be regarded as a regular execution will be issued. Let again the property at hand be: "Whenever a sensor node has collected data, the central node will eventually process it". The execution segment should take into account whether the data was obtained and if the central node processed it. Both of these details may have been produced during the feature engineering stage and could be utilized in this instance for data labeling. If there is a boolean column with the value \textit{True} for a given segment, indicating that the data has been collected, and another boolean column with the value \textit{False}, indicating that the central node did not process the data, then it can be assumed that the given row, associated with the execution segment, violated the TCTL property.
+Finally, the classification phase will make use of the recently derived dataset. The rows will be examined in accordance with the observer state transitions and signals, and a label indicating whether the row describes a violation or can be regarded as a regular execution will be issued. Let again the property at hand be: "Whenever a sensor node has collected data, the central node will eventually process it". The execution segment should take into account whether the data was obtained and if the central node processed it by looking at the signals received by the observer. These two behaviors have been mapped during the feature engineering stage and could be utilized in this instance for data labeling. If there is a boolean column with the value \textit{True} for a given segment, indicating that the data has been collected, and another boolean column with the value \textit{False}, indicating that the central node did not process the data, then it can be assumed that the given row, associated with the execution segment, violated the property.
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[width=0.999\textwidth, keepaspectratio]{img/FeatureEngResult.png}
+	\includegraphics[width=0.999\textwidth, keepaspectratio]{img/modelica_observer_signals.png}
 	\caption{Example of a feature engineered execution segment}
 	\label{fig:FeatureEngResult}
 \end{figure}
 
-Figure \ref{fig:FeatureEngResult} displays what would be the row associated with the time-restricted segment from Figure \ref{fig:Segmentation}. Since 2 seconds was not enough time for the central node to process the data, it was considered not done whithin the time window of th property. Hence, the column "Central Node processed" is zero, and "Time until Central Node processed" is \textit{null}, and therefore the row is labeled 1, meaning that this segment does violate the property.
-% TODO: the observer signals are used as input for the labeling.
+Figure \ref{fig:FeatureEngResult} displays what would be the row associated with the time-restricted segment from Figure \ref{fig:Segmentation}. The observer starts in the initial state and moves forward if the data is collected. In the next state, it waits for the signal indicating that the Central Node processed the data to return back to the first state. In the example, since 2 seconds was not enough time for the central node to process the data, it was considered not done whithin the time window of the property. Hence, the column "Central Node processed" is zero, and "Time until Central Node processed" is \textit{null}, and therefore the row is labeled 1, meaning that this segment does violate the property.
 
 \subsection{Negative Selection Algorithm}
 
-This final phase is the heart of the framework. It aims at using the Negative Selection Algorithm to try and find patterns in the nonself-set, in order to find new context variability that were not considered at first, and thus enhace the system's observers. This will be done in five steps. First, (i) the data obtained in the last phase will be analyzed so that the least relevant features may be discarded. Then, (ii) the remaining features will compose a string that will be used in the NSA. Next, (iii) the NSA will be performed and the nonself detectors will be generated and matured. Following that, (iv) the detector set will be thoroughly examined for the discovery of new context variability. Finally, (v) the information obtained will be used to refine both the system's TCTL properties and observers.
+This step is the heart of the framework. It aims at using the Negative Selection Algorithm to try and find patterns in the nonself-set, in order to find patterns in the execution segments related to property violations that were not considered at first, and thus enhace the system's observers. This will be done in five steps. First, (i) the data obtained in the last step will be analyzed so that the least relevant features may be discarded. Then, (ii) the remaining features will compose a string that will be used in the NSA. Next, (iii) the NSA will be performed and the nonself detectors will be generated and matured. Following that, (iv) the detector set will be thoroughly examined for the discovery of new context variability. Finally, (v) the information obtained will be used to refine both the system's properties and observers.
 
 \subsubsection{i. Exploratory Data Analysis}
 
-This initial step focuses on exploring the generated features to verify their relation with the property violation label, besides checking the integrity of the dataset. Another goal of this step is the selection of the features that will be used in the Negative Selection Algorithm.
+This initial step focuses on checking the integrity of the dataset and exploring the generated features to verify their relation with the property violation label. Another goal of this step is the selection of the features that will be used in the Negative Selection Algorithm.
 
-Here, a series of dataset validations and verifications were conducted as part of a sanity check and preliminar analysis. First, the missing data are taken care of, and the required data types and ranges are adhered to the expected. The columns are then examined both singly and collectively to confirm their behavior. For instance, if data wasn't collected, it couldn't be processed. Thus, cases where the opposite happens are handled. This analysis also helps to decrease the number of features in the dataset by eliminating the columns that provide little or no information, based on their variance or the percentage of missing data.
+Here, a series of dataset validations are conducted as part of a sanity check and preliminar analysis. First, the missing data are taken care of, and the required data types and ranges are adhered to the expected. The columns are then examined both individually and collectively to confirm that the simulated system behaves as expected. For instance, if data wasn't collected, it couldn't be processed. Thus, cases where the opposite happens are handled by either removing the faulty occurrences or by refining the simulation model. Besides that, this analysis helps to decrease the number of features in the dataset by eliminating the columns that provide little or no information, based on their variance or the percentage of missing data.
 
-Next, a correlation analysis takes place. Initially, the correlation matrix is computed, pairing the features and scoring their relationship. The features that are highly correlated, positively or negatively, indicate that the same information is provided and, thus, one of them is removed.
+Next, a correlation analysis takes place. Initially, the correlation matrix is computed, pairing the features and scoring their relationship. High correlations between two features indicate that both provide the same information and, thus, one of them can be removed.
 
 Finally, the features that will be used in the NSA are selected. Our work uses the binary version of the Negative Selection Algorithm, as described in Section \ref{sec:bgNSA}, meaning that only binary features can be used, at first. This being said, the boolean features are set apart and have their relation with the label measured. Since it does not matter much if the feature is positively or negatively correlated, only the absolute value is taken into account. Then, the features are sorted based on the strenght of the relationship and the ones that are below a certain threshold are discarded.
 
-It is noteworthy to bring the reason why the columns were sorted. We shall employ the R-chunk as a matching rule in our work, which indicates that the detector candidate is often shorter than the string from the self-set. It is possible that relevant patterns are not seen if the columns are arranged randomly. This happens because the important bits might be positioned far apart and the chunk may be too short to consider all of them at once. The likelihood of this happening is reduced when the columns are arranged according to how strongly they relate to the label. Besides that, measuring the correlation allows us to filter out noisy features and, thus, enhance the result of the experiment.
+It is noteworthy to bring the reason why the columns were sorted. We shall employ the R-chunk as a matching rule in our work, which indicates that the detector candidate is often shorter than the string from the self-set. It is possible that relevant patterns are not seen by a single detector if the columns are arranged randomly. This happens because the important bits might be positioned far apart and the chunk may be too short to consider all of them at once. The likelihood of this happening is reduced when the columns are arranged according to how strongly they relate to the label. Besides that, measuring the correlation allows us to filter out noisy features and, thus, enhance the result of the experiment.
 
 The output of this step are the adjusted execution segment dataset and the ordered list of boolean features that will be used in the Negative Selection Algorithm. 
 
@@ -162,7 +161,7 @@ Figure \ref{fig:stringFormatting} illustrates this process in the execution segm
 
 \subsubsection{iii. NSA execution}
 
-After gathering the data, preparing the dataset and formatting the strings, the dataset is ready to go through the Negative Selection Algorithm. This subsection will explain the implementation of the training phase of the algorithm, based on the theoretical background in Section \ref{sec:bgNSA}, that will be used in this work.
+After gathering the data, preparing the dataset and formatting the strings, the dataset is ready to go through the Negative Selection Algorithm. This subsection will explain the implementation of the training phase of the algorithm, based on the theoretical background in Section \ref{sec:bgNSA}.
 
 Our implementation of the NSA will meet the three requirements listed by Ji and Dasgupta \cite{RevisitingNSA2007} in order to be categorized as a Negative Selection Algorithm. It will make use only of the self-set (i) to randomly generate binary string detectors (ii) in order to identify the self-set counterpart (iii).
 
@@ -179,7 +178,6 @@ In this regard, we included a third hyperparameter to workaround the cases when 
 
 The training of the algorithm will be performed as follows. First, the whole dataset will be split in two: one for the actual training and detector generation, and other for measuring the results and checking how well the detectors perform with unseen data. Second, the training set will have the nonself rows filtered out. Third, random strings of size \(r\) will be generated and tested against the self-strings in the training data in all possible positions. If there's a match, the detector candidate is discarded for that particular position. Otherwise, the string is stored along with the position in the detectors set. The third process is repeated until the length of the detectors set reaches a predefined size, or until no new detectors are added to the set after a fixed amount of attempts. Finally, the result of the learning phase is measured by using the detectors to predict property violations in the test set, which contains both self and nonself-data. The actual values are compared with the predicted values and the metrics of precision and recall are evaluated.
 
-% TODO: Mention that only the training will be performed
 
 \subsubsection{iv. Detector Analysis}
 
@@ -196,14 +194,15 @@ The detectors are sorted based on how many violations are matched. The most rele
 
 Figure \ref{fig:detectoAnalysis} shows how the mapping is done. The detector \(t_{2, 101}\) of size \(r = 3\) indicates a property violation pattern in position 2 with the values \(101\). By looking at the table with the corresponding features and positions, we can see that this pattern identifies the violations that happen when the data is collected, processed, but is not processed by the central node.  
 
-One of the three features of the set may already account for context variability that was not yet considered. In this case, the next step could be performed right away. Otherwise, the remaining features that were not used in the generation of the detectors may come into play, like the weakly related booleans and the continuous variables that did not fit the algorithm. These features are analyzed specifically in the rows that were matched by the detector as an attempt to discover new hidden context combinations.
+One of the three features of the set may already account for a variability that was not yet considered. In this case, the next step could be performed right away. Otherwise, the remaining features that were not used in the generation of the detectors may come into play, like the weakly related booleans and the continuous variables that did not fit the algorithm. These features are analyzed specifically in the rows that were matched by the detector as an attempt to discover new hidden context combinations.
 
+Another possible analysis that can be performed relates to the coverage of the detectors. It is possible that all the nonself-data matched by a detector (i) is also matched by another detector (ii). Therefore, two possible scenarios may arise. First, detectors (i) and (ii) match exactly the same nonself-data. In this case, they are related to the same pattern of anomaly and, thus, can be aglutinated into a single detector. Second, one of the detectors, let's say (i), matches all of the nonself-data matched by (ii) and more. Hence, it is possible to state that (ii) is a specialization of the pattern found in (i), i.e. part of the violations detected by the pattern in (i) can be better detailed by looking at the pattern in (ii). This fact can be useful for the segmentation of the violation patterns found into clusters.
 
 \subsubsection{v. Property Refinement}
 
-Finally, after the new context variabiliy have been unveiled, the system's specification and properties are revisited. Initially, these contexts are properly elicited and returned to the Contextual Goal Model by a human analyst. Then, we iteratively map them to either existing or newly discovered system properties as well as to system model components. This means that, once we get to the final end of our approach, the updated CGM obtained as a result, is used as an input for a new execution of the whole methodology.
+Finally, after the patterns have been unveiled, the system's specification and properties are revisited. Initially, new contexts found are properly elicited and returned to the Contextual Goal Model by a human analyst. Then, we iteratively map them to either existing or newly discovered system properties as well as to system model components. This means that, once we get to the final end of our approach, the updated CGM obtained as a result, can be used as an input for a new execution of the whole methodology.
 
-This stage is comparable to the conclusion of the BIS's adaptive immune response. In the human body, the lymphocytes that have undergone differentiation and maturation and have a high affinity for an antigen at hand are pumped via the bloodstream to the site of the inflammation. Whereas in our framework, the collection of NSA detectors triggers the development and improvement of observers, which are then put back into the system model to constantly check out for property violations while monitoring the newly revealed contexts.
+This stage is comparable to the conclusion of the BIS's adaptive immune response. In the human body, the T-lymphocytes that have undergone differentiation and maturation and have a high affinity for an antigen at hand are pumped via the bloodstream to the site of the inflammation. Whereas in our framework, the collection of NSA detectors triggers the development and improvement of observers, which are then put back into the system model to constantly check out for property violations while monitoring the newly revealed contexts.
 
 % \section{Overview of the Proposed Methodology}
 % TODO
